--- a/Goods-Buying-and-Selling--master/package.json
+++ b/Goods-Buying-and-Selling--master/package.json
@@ -10,5 +10,10 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.0",
+        "@emotion/styled": "^11.10.0",
+        "@mui/material": "^5.9.3"
     }
 }
